--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
 	"main": "build/index.js",
 	"browserslist": "defaults and >1% and not samsung > 0 and not op_mini all",
 	"scripts": {
-		"build": "wp-scripts build",
-		"dev": "wp-scripts start",
+		"build": "run-p build:*",
+		"build:normal": "wp-scripts build --config webpack.config.mjs",
+		"build:test": "wp-scripts build --config webpack.config.mjs --output-path=../snap/public/wp-content/plugins/snap-blocks/build",
+		"dev": "wp-scripts start --config webpack.config.mjs",
 		"deploy": "echo \"This project doesn't have an automated deploy process set up yet.\"",
 		"deploy:prod": "echo \"This project doesn't have an automated deploy process set up yet.\"",
 		"test": "echo \"This project doesn't have automated testing set up yet.\"",
@@ -21,10 +23,18 @@
 		"setup": "echo \"This project doesn't have automated local setup, be sure to check the README file for instructions.\""
 	},
 	"devDependencies": {
-		"@types/node": "^18.11.3",
+		"@types/node": "^18.11.9",
+		"@types/webpack": "^5.28.0",
 		"@types/wordpress__block-editor": "^7.0.0",
+		"@wordpress/dependency-extraction-webpack-plugin": "^4.4.0",
+		"autoprefixer": "^10.4.13",
+		"cssnano": "^5.1.14",
 		"del-cli": "^5.0.0",
+		"mini-css-extract-plugin": "^2.6.1",
 		"npm-run-all": "^4.1.5",
+		"postcss": "^8.4.18",
+		"tailwindcss": "^3.2.1",
+		"ts-node": "^10.9.1",
 		"typescript": "^4.8.4"
 	},
 	"dependencies": {
