fix: workaround CSS files issue

--- a/package.json
+++ b/package.json
@@ -8,10 +8,15 @@
 	"main": "build/index.js",
 	"browserslist": "defaults and >1% and not samsung > 0 and not op_mini all",
 	"scripts": {
-		"build": "run-p build:*",
-		"build:normal": "wp-scripts build --config webpack.config.mjs",
-		"build:test": "wp-scripts build --config webpack.config.mjs --output-path=../snap/public/wp-content/plugins/snap-blocks/build",
-		"dev": "wp-scripts start --config webpack.config.mjs",
+		"build": "npm-run-all clean --parallel build:*",
+		"build:css": "npm-run-all css:*",
+		"build:wp": "wp-scripts build --config webpack.config.mjs",
+		"clean": "del-cli \"./build/\"",
+		"css:compile": "postcss --base src --dir build src/**/*.css",
+		"css:hash": "node hashCSSFiles.mjs",
+		"dev": "run-p dev:*",
+		"dev:wp": "wp-scripts start --config webpack.config.mjs",
+		"dev:css": "npm run css:compile -- --watch",
 		"deploy": "echo \"This project doesn't have an automated deploy process set up yet.\"",
 		"deploy:prod": "echo \"This project doesn't have an automated deploy process set up yet.\"",
 		"test": "echo \"This project doesn't have automated testing set up yet.\"",
@@ -28,11 +33,13 @@
 		"@types/wordpress__block-editor": "^7.0.0",
 		"@wordpress/dependency-extraction-webpack-plugin": "^4.4.0",
 		"autoprefixer": "^10.4.13",
+		"crypto": "^1.0.1",
 		"cssnano": "^5.1.14",
 		"del-cli": "^5.0.0",
-		"mini-css-extract-plugin": "^2.6.1",
+		"glob": "^8.0.3",
 		"npm-run-all": "^4.1.5",
 		"postcss": "^8.4.18",
+		"postcss-cli": "^10.0.0",
 		"tailwindcss": "^3.2.1",
 		"ts-node": "^10.9.1",
 		"typescript": "^4.8.4"
