feat: add compile into WP build for development

--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
 		"build": "NODE_ENV=\"production\" npm-run-all clean --parallel build:*",
 		"build:css": "npm-run-all css:*",
 		"build:wp": "wp-scripts build --config webpack.config.mjs",
+		"build:test": "wp-scripts build --config webpack.config.mjs --output-path=../snap/public/wp-content/plugins/snap-blocks/build",
 		"clean": "del-cli \"./build/\"",
 		"css:compile": "postcss --base src --dir build src/**/*.css",
+		"css:test": "postcss --base src --dir ../snap/public/wp-content/plugins/snap-blocks/build src/**/*.css",
 		"css:hash": "node hashCSSFiles.mjs",
 		"dev": "run-p dev:*",
 		"dev:wp": "wp-scripts start --config webpack.config.mjs",
