--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
 	"name": "dynamic-block",
+	"type": "module",
 	"version": "0.1.0",
 	"description": "This is an example dynamic block created for testing purposes.",
 	"author": "Atomic Smash",
@@ -25,31 +26,41 @@
 		"test:ui": "echo \"This project doesn't have automated testing set up yet.\"",
 		"release": "echo \"This project doesn't have any release steps set up yet.\"",
 		"lint": "npm-run-all --parallel lint:*",
+		"lint:eslint": "eslint .",
 		"lint:types": "tsc -b",
-		"format": "echo \"This project doesn't have formatting set up yet.\"",
+		"format": "prettier --write .",
 		"setup": "echo \"This project doesn't have automated local setup, be sure to check the README file for instructions.\""
 	},
 	"devDependencies": {
+		"@types/lodash": "^4.14.189",
 		"@types/node": "^18.11.9",
 		"@types/webpack": "^5.28.0",
 		"@types/wordpress__block-editor": "^7.0.0",
-		"@wordpress/dependency-extraction-webpack-plugin": "^4.4.0",
+		"@typescript-eslint/eslint-plugin": "^5.43.0",
+		"@typescript-eslint/parser": "^5.43.0",
+		"@wordpress/dependency-extraction-webpack-plugin": "^4.5.0",
+		"@wordpress/scripts": "^24.6.0",
 		"autoprefixer": "^10.4.13",
 		"crypto": "^1.0.1",
 		"cssnano": "^5.1.14",
 		"del-cli": "^5.0.0",
+		"eslint": "^8.27.0",
+		"eslint-config-prettier": "^8.5.0",
+		"eslint-plugin-import": "^2.26.0",
+		"eslint-plugin-node": "^11.1.0",
 		"glob": "^8.0.3",
 		"npm-run-all": "^4.1.5",
 		"postcss": "^8.4.18",
 		"postcss-cli": "^10.0.0",
+		"prettier": "^2.7.1",
 		"tailwindcss": "^3.2.1",
 		"ts-node": "^10.9.1",
-		"typescript": "^4.8.4"
+		"typescript": "^4.9.3"
 	},
 	"dependencies": {
-		"@wordpress/block-editor": "^10.2.0",
-		"@wordpress/blocks": "^11.19.0",
-		"@wordpress/i18n": "^4.19.0",
-		"@wordpress/scripts": "^24.4.0"
+		"@wordpress/block-editor": "^10.5.0",
+		"@wordpress/blocks": "^11.21.0",
+		"@wordpress/i18n": "^4.22.0",
+		"lodash": "^4.17.21"
 	}
 }
