--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
 		"src/**/*.tsx",
 		"src/**/*.js",
 		"src/**/*.jsx",
-		"env.d.ts"
+		".eslintrc.cjs"
 	],
 	"compilerOptions": {
 		"sourceMap": true,
