improve dev workflow of project

--- a/package.json
+++ b/package.json
@@ -9,17 +9,8 @@
 	"main": "build/index.js",
 	"browserslist": "defaults and >1% and not samsung > 0 and not op_mini all",
 	"scripts": {
-		"build": "NODE_ENV=\"production\" npm-run-all clean --parallel build:*",
-		"build:css": "npm-run-all css:*",
-		"build:wp": "wp-scripts build --config webpack.config.mjs",
-		"build:test": "wp-scripts build --config webpack.config.mjs --output-path=../snap/public/wp-content/plugins/snap-blocks/build",
-		"clean": "del-cli \"./build/\"",
-		"css:compile": "postcss --base src --dir build src/**/*.css",
-		"css:test": "postcss --base src --dir ../snap/public/wp-content/plugins/snap-blocks/build src/**/*.css",
-		"css:hash": "node hashCSSFiles.mjs",
-		"dev": "run-p dev:*",
-		"dev:wp": "wp-scripts start --config webpack.config.mjs",
-		"dev:css": "npm run css:compile -- --watch",
+		"build": "NODE_ENV=\"production\" wp-scripts build --config webpack.config.mjs --webpack-copy-php",
+		"dev": "wp-scripts start --config webpack.config.mjs --webpack-copy-php",
 		"deploy": "echo \"This project doesn't have an automated deploy process set up yet.\"",
 		"deploy:prod": "echo \"This project doesn't have an automated deploy process set up yet.\"",
 		"test": "echo \"This project doesn't have automated testing set up yet.\"",
@@ -43,7 +34,7 @@
 		"autoprefixer": "^10.4.13",
 		"crypto": "^1.0.1",
 		"cssnano": "^5.1.14",
-		"del-cli": "^5.0.0",
+		"del": "^7.0.0",
 		"eslint": "^8.27.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-import": "^2.26.0",
