--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"del": "^7.0.0",
 		"eslint": "^8.27.0",
 		"eslint-config-prettier": "^8.5.0",
+		"eslint-import-resolver-alias": "^1.1.2",
 		"eslint-import-resolver-node": "^0.3.6",
 		"eslint-import-resolver-typescript": "^3.5.2",
 		"eslint-plugin-import": "^2.26.0",
@@ -48,6 +49,7 @@
 		"prettier": "^2.7.1",
 		"tailwindcss": "^3.2.1",
 		"ts-node": "^10.9.1",
+		"tsconfig-paths-webpack-plugin": "^4.0.0",
 		"typescript": "^4.9.3"
 	},
 	"dependencies": {
