--- a/package.json
+++ b/package.json
@@ -55,6 +55,10 @@
 	"dependencies": {
 		"@wordpress/block-editor": "^10.5.0",
 		"@wordpress/blocks": "^11.21.0",
+		"@wordpress/components": "^22.1.0",
+		"@wordpress/data": "^7.6.0",
+		"@wordpress/dom-ready": "^3.22.0",
+		"@wordpress/element": "^4.20.0",
 		"@wordpress/i18n": "^4.22.0",
 		"lodash": "^4.17.21"
 	}
