--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"@typescript-eslint/eslint-plugin": "^5.43.0",
 		"@typescript-eslint/parser": "^5.43.0",
 		"@wordpress/dependency-extraction-webpack-plugin": "^4.5.0",
+		"@wordpress/eslint-plugin": "^13.6.0",
 		"@wordpress/scripts": "^24.6.0",
 		"autoprefixer": "^10.4.13",
 		"crypto": "^1.0.1",
