--- a/package.json
+++ b/package.json
@@ -26,12 +26,12 @@
 		"@types/lodash": "^4.14.189",
 		"@types/node": "^18.11.9",
 		"@types/webpack": "^5.28.0",
-		"@types/wordpress__block-editor": "^7.0.0",
+		"@types/wordpress__block-editor": "^11.0.1",
 		"@typescript-eslint/eslint-plugin": "^5.43.0",
 		"@typescript-eslint/parser": "^5.43.0",
-		"@wordpress/dependency-extraction-webpack-plugin": "^4.5.0",
-		"@wordpress/eslint-plugin": "^13.6.0",
-		"@wordpress/scripts": "^24.6.0",
+		"@wordpress/dependency-extraction-webpack-plugin": "^4.8.0",
+		"@wordpress/eslint-plugin": "^13.9.0",
+		"@wordpress/scripts": "^25.2.0",
 		"autoprefixer": "^10.4.13",
 		"crypto": "^1.0.1",
 		"cssnano": "^5.1.14",
@@ -53,9 +53,13 @@
 		"typescript": "^4.9.3"
 	},
 	"dependencies": {
-		"@wordpress/block-editor": "^10.5.0",
-		"@wordpress/blocks": "^11.21.0",
-		"@wordpress/i18n": "^4.22.0",
+		"@wordpress/block-editor": "^11.2.0",
+		"@wordpress/blocks": "^12.2.0",
+		"@wordpress/components": "^23.2.0",
+		"@wordpress/data": "^8.2.0",
+		"@wordpress/dom-ready": "^3.25.0",
+		"@wordpress/element": "^5.2.0",
+		"@wordpress/i18n": "^4.25.0",
 		"lodash": "^4.17.21"
 	}
 }
