--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
 		"@wordpress/block-editor": "^11.2.0",
 		"@wordpress/blocks": "^12.2.0",
 		"@wordpress/components": "^23.2.0",
+		"@wordpress/core-data": "^6.2.0",
 		"@wordpress/data": "^8.2.0",
 		"@wordpress/dom-ready": "^3.25.0",
 		"@wordpress/element": "^5.2.0",
