--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
 	"main": "build/index.js",
 	"browserslist": "defaults and >1% and not samsung > 0 and not op_mini all",
 	"scripts": {
-		"build": "NODE_ENV=\"production\" wp-scripts build --config webpack.config.mjs --webpack-copy-php",
-		"dev": "wp-scripts start --config webpack.config.mjs --webpack-copy-php",
+		"build": "NODE_ENV=\"production\" smash-cli blocks --in src --out build",
+		"dev": "smash-cli blocks --watch --in src --out build",
 		"deploy": "echo \"This project doesn't have an automated deploy process set up yet.\"",
 		"deploy:prod": "echo \"This project doesn't have an automated deploy process set up yet.\"",
 		"test": "echo \"This project doesn't have automated testing set up yet.\"",
@@ -23,19 +23,12 @@
 		"setup": "echo \"This project doesn't have automated local setup, be sure to check the README file for instructions.\""
 	},
 	"devDependencies": {
+		"@atomicsmash/cli": "^3.1.1",
 		"@types/lodash": "^4.14.189",
-		"@types/node": "^18.11.9",
-		"@types/webpack": "^5.28.0",
 		"@types/wordpress__block-editor": "^11.0.1",
 		"@typescript-eslint/eslint-plugin": "^5.43.0",
 		"@typescript-eslint/parser": "^5.43.0",
-		"@wordpress/dependency-extraction-webpack-plugin": "^4.8.0",
 		"@wordpress/eslint-plugin": "^13.9.0",
-		"@wordpress/scripts": "^25.2.0",
-		"autoprefixer": "^10.4.13",
-		"crypto": "^1.0.1",
-		"cssnano": "^5.1.14",
-		"del": "^7.0.0",
 		"eslint": "^8.27.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-import-resolver-alias": "^1.1.2",
@@ -43,16 +36,12 @@
 		"eslint-import-resolver-typescript": "^3.5.2",
 		"eslint-plugin-import": "^2.26.0",
 		"eslint-plugin-node": "^11.1.0",
-		"glob": "^8.0.3",
 		"npm-run-all": "^4.1.5",
-		"postcss": "^8.4.18",
-		"postcss-cli": "^10.0.0",
 		"prettier": "^2.7.1",
-		"ts-node": "^10.9.1",
-		"tsconfig-paths-webpack-plugin": "^4.0.0",
 		"typescript": "^4.9.3"
 	},
 	"dependencies": {
+		"@atomicsmash/blocks-helpers": "^1.0.0",
 		"@wordpress/block-editor": "^11.2.0",
 		"@wordpress/blocks": "^12.2.0",
 		"@wordpress/components": "^23.2.0",
