--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
 	},
 	"devDependencies": {
 		"@atomicsmash/cli": "^3.1.1",
-		"@types/lodash": "^4.14.189",
 		"@types/wordpress__block-editor": "^11.0.1",
 		"@typescript-eslint/eslint-plugin": "^5.43.0",
 		"@typescript-eslint/parser": "^5.43.0",
@@ -48,7 +47,6 @@
 		"@wordpress/data": "^8.2.0",
 		"@wordpress/dom-ready": "^3.25.0",
 		"@wordpress/element": "^5.2.0",
-		"@wordpress/i18n": "^4.25.0",
-		"lodash": "^4.17.21"
+		"@wordpress/i18n": "^4.25.0"
 	}
 }
