--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"snap-blocks.php"
 	],
 	"scripts": {
+		"prepare": "husky",
 		"clean": "del-cli build",
 		"build": "NODE_ENV=\"production\" smash-cli blocks --in src --out build",
 		"dev": "smash-cli blocks --watch --in src --out build",
@@ -27,28 +28,25 @@
 		"lint:eslint": "eslint .",
 		"lint:types": "tsc -b",
 		"format": "prettier --write .",
-		"setup": "echo \"This project doesn't have automated local setup, be sure to check the README file for instructions.\"",
-		"prepare": "husky install",
-		"zip": "wp-scripts plugin-zip"
+		"setup": "echo \"This project doesn't have automated local setup, be sure to check the README file for instructions.\""
 	},
 	"devDependencies": {
-		"@atomicsmash/cli": "^3.1.2",
-		"@atomicsmash/coding-standards": "^3.2.0",
-		"@types/wordpress__block-editor": "^11.0.1",
-		"@wordpress/eslint-plugin": "^13.10.3",
-		"@wordpress/scripts": "^26.2.0",
+		"@atomicsmash/cli": "^4.1.0",
+		"@atomicsmash/coding-standards": "^9.0.0",
+		"@types/wordpress__block-editor": "^11.5.10",
+		"@wordpress/eslint-plugin": "^17.9.0",
 		"del-cli": "^5.0.0",
-		"husky": "^8.0.3",
+		"husky": "^9.0.11",
 		"npm-run-all": "^4.1.5",
-		"typescript": "^4.9.3"
+		"typescript": "^5.3.3"
 	},
 	"dependencies": {
-		"@atomicsmash/blocks-helpers": "^1.1.0",
-		"@wordpress/block-editor": "^11.2.0",
-		"@wordpress/blocks": "^12.2.0",
-		"@wordpress/components": "^23.2.0",
-		"@wordpress/data": "^8.2.0",
-		"@wordpress/dom-ready": "^3.25.0",
+		"@atomicsmash/blocks-helpers": "^2.1.0",
+		"@wordpress/block-editor": "^12.20.0",
+		"@wordpress/blocks": "^12.29.0",
+		"@wordpress/components": "^27.0.0",
+		"@wordpress/data": "^9.22.0",
+		"@wordpress/dom-ready": "^3.52.0",
 		"@wordpress/element": "^5.2.0",
 		"@wordpress/i18n": "^4.25.0"
 	}
